--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -10,7 +10,7 @@ body {
     background-color: #242424;
 }
 
-li, a, button {
+header li, header a, header button, header p {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     font-size: 16px;
