added user profile to navbar
Added a user profile for logged-in users
The navbar also displays differently depending on the user's role

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -119,7 +119,7 @@ a {
 #error-message {
     color: red;
     font-weight: bold;
-    font-family: Helvetica, serif;
+    font-family: monospace;
     font-size: small;
     text-align: center;
 }
