--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -10,7 +10,7 @@ body {
     background-color: #242424;
 }
 
-header li, header a, header button, header p {
+header li, header a, header button {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -93,4 +93,113 @@ button {
 
 button:hover {
     background-color: rgba(27, 153, 139, 0.8);
+}
+
+#user-profile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#user-profile #user-pfp {
+    width: 40px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+#user-profile p {
+    margin-left: 10px;
+    color: white;
+    font-weight: bold;
+}
+
+.submenu-wrap {
+    position: absolute;
+    right: 5%;
+    width: 320px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s;
+}
+
+.submenu-wrap.open {
+    max-height: 400px;
+}
+
+.submenu {
+    background: white;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-info p {
+    font-weight: bold;
+}
+
+.user-info span {
+    font-size: small;
+}
+
+.user-info #role-user {
+    color: gray;
+}
+
+.user-info #role-manager {
+    color: mediumblue;
+}
+
+.user-info #role-admin {
+    color: red;
+}
+
+.user-info img {
+    width: 60px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.submenu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #ccc;
+    margin: 15px 10px;
+}
+
+.submenu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #525252;
+    margin: 12px 0;
+}
+
+.submenu-link p {
+    width: 100%;
+}
+
+.submenu-link img {
+    width: 40px;
+    background-color: #e5e5e5;
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+}
+
+.submenu-link span {
+    transition: transform 0.5s;
+}
+
+.submenu-link:hover span {
+    transform: translateX(5px);
+}
+
+.submenu-link:hover p {
+    font-weight: bold;
 }
