--- a/static/css/login.css
+++ b/static/css/login.css
@@ -9,7 +9,9 @@ body {
 img {
     margin-top: 20px;
     margin-left: -11%;
-    width: 100px;
+    width: 150px;
+    z-index: 10;
+    position: relative;
 }
 
 h1 {
