started implementing user management

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -6,10 +6,6 @@
     padding: 0;
 }
 
-body {
-    background-color: #242424;
-}
-
 header li, header a, header button {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -23,6 +19,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 10%;
+    background-color: #242424;
 }
 
 #navbar-logo {
@@ -82,7 +79,7 @@ header {
     white-space: nowrap;
 }
 
-button {
+header button {
     padding: 9px 25px;
     background-color: rgba(27, 153, 139, 1);
     border: none;
@@ -91,7 +88,7 @@ button {
     transition: all 0.3s ease 0s;
 }
 
-button:hover {
+header button:hover {
     background-color: rgba(27, 153, 139, 0.8);
 }
 
@@ -99,6 +96,7 @@ button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 #user-profile #user-pfp {
@@ -110,7 +108,6 @@ button:hover {
 #user-profile p {
     margin-left: 10px;
     color: white;
-    font-weight: bold;
 }
 
 .submenu-wrap {
@@ -131,6 +128,7 @@ button:hover {
     padding: 20px;
     margin: 10px;
     border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .user-info {
