--- a/static/css/userManagement.css
+++ b/static/css/userManagement.css
@@ -15,6 +15,15 @@ h1 {
     font-weight: bold;
 }
 
+#search {
+    text-align: center;
+    margin-top: 2%;
+}
+
+#search input {
+    width: 25%;
+}
+
 table {
     border: solid 1px black;
     border-collapse: collapse;
