--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -129,6 +129,7 @@ header button:hover {
     margin: 10px;
     border-radius: 10px;
     font-family: 'Poppins', sans-serif;
+    border: solid 4px #DECDF5;
 }
 
 .user-info {
