--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+header * {
+    box-sizing: border-box;
 }
 
 header li, header a, header button {
