--- a/static/css/tickets.css
+++ b/static/css/tickets.css
@@ -27,6 +27,17 @@ h1 {
     filter: brightness(110%);
 }
 
+#success-message {
+    text-align: center;
+    color: green;
+}
+
+#error-message {
+    text-align: center;
+    color: red;
+    font-weight: bold;
+}
+
 #tickets {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -99,6 +110,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     width: 40%;
+    margin-right: 2%;
 }
 
 .ticket-button {
@@ -109,6 +121,8 @@ h1 {
     border-radius: 30px;
     box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    text-decoration: none;
+    font-size: small;
 }
 
 .ticket-button:hover {
@@ -125,7 +139,7 @@ h1 {
     color: black;
 }
 
-.ticket-button.close {
+.ticket-button.modify {
     background-color: #1B998B;
     color: white;
 }
