--- a/static/css/addTicket.css
+++ b/static/css/addTicket.css
@@ -13,7 +13,7 @@ h1 {
     padding: 2%;
     border: solid 2px black;
     border-radius: 30px;
-    background-color: #D9D9D9;
+    background-color: #e9e9e9;
 }
 
 .ticket-title {
