--- a/static/css/ticketDetail.css
+++ b/static/css/ticketDetail.css
@@ -3,8 +3,13 @@ body {
 }
 
 h1 {
-    text-align: center;
-    margin: 2% auto 2% auto;
+    text-align: left;
+    margin: 2% auto 1% 2%;
+    color: #1B998B;
+}
+
+body > hr {
+    margin: 0 2% 2% 2%;
 }
 
 #add-ticket {
@@ -44,7 +49,8 @@ h1 {
 }
 
 .ticket {
-    margin: 2%;
+    width: 50%;
+    margin: auto;
     padding: 2%;
     border: solid 2px black;
     border-radius: 30px;
@@ -76,7 +82,7 @@ h1 {
 }
 
 .tag.suggestion {
-    background-color: dodgerblue;
+    background-color: deepskyblue;
 }
 
 .tag.urgent {
@@ -94,18 +100,9 @@ h1 {
     margin: 2% auto 2% auto;
 }
 
-.ticket-description {
-    height: 75px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    line-clamp: 3;
-    -webkit-box-orient: vertical;
-}
-
 .ticket-footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
     margin-top: 3%;
 }
