changed popup profile border color

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -132,7 +132,7 @@ header button:hover {
     margin: 10px;
     border-radius: 10px;
     font-family: 'Poppins', sans-serif;
-    border: solid 4px #DECDF5;
+    border: solid 4px #1B998B;
 }
 
 .user-info {
