--- a/static/css/userProfile.css
+++ b/static/css/userProfile.css
@@ -13,14 +13,25 @@ body > hr {
 }
 
 #success-message {
+    margin: 1% auto 1% auto;
+    padding: 1%;
+    width: 75%;
     text-align: center;
-    color: green;
+    color: #155724;
+    background-color: #d4edda;
+    border: solid 1px #c3e6cb;
+    border-radius: .25rem;
 }
 
 #error-message {
+    margin: 1% auto 1% auto;
+    padding: 1%;
+    width: 75%;
     text-align: center;
-    color: red;
-    font-weight: bold;
+    color: #721c24;
+    background-color: #f8d7da;
+    border: solid 1px #f5c6cb;;
+    border-radius: .25rem;
 }
 
 #profile-header {
@@ -91,11 +102,15 @@ h2 {
     margin-bottom: 1%;
 }
 
-#submitButton {
+#currentPasswordMandatory {
+    display: none;
+}
+
+#submit {
     text-align: center;
 }
 
-#submitButton > button {
+#submitButton {
     font-weight: bold;
     margin: auto 2% auto 2%;
     padding: 1% 2% 1% 2%;
@@ -107,6 +122,6 @@ h2 {
     color: white;
 }
 
-#submitButton > button:hover {
+#submitButton:hover {
     filter: brightness(110%);
 }
