--- a/static/css/userManagement.css
+++ b/static/css/userManagement.css
@@ -1,3 +1,14 @@
+body {
+    font-family: Poppins, 'sans-serif';
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+#page-wrapper {
+    flex-grow: 1;
+}
+
 h1 {
     text-align: center;
     font-family: Poppins, 'sans-serif';
