--- a/static/css/userProfile.css
+++ b/static/css/userProfile.css
@@ -1,5 +1,12 @@
 body {
     font-family: Poppins, 'sans-serif';
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+#page-wrapper {
+    flex-grow: 1;
 }
 
 h1 {
@@ -8,7 +15,7 @@ h1 {
     color: #1B998B;
 }
 
-body > hr {
+#page-wrapper > hr {
     margin: 0 2% 1% 2%;
 }
 
@@ -108,6 +115,10 @@ h2 {
 
 #submit {
     text-align: center;
+}
+
+#submit > p {
+    margin-top: 2%;
 }
 
 #submitButton {
