--- a/static/css/addFAQ.css
+++ b/static/css/addFAQ.css
@@ -10,18 +10,47 @@ body {
 }
 
 h1 {
-    text-align: center;
-    font-family: Poppins, 'sans-serif';
-    margin-top: 2%;
+    text-align: left;
+    margin: 2% auto 1% 2%;
+    color: #1B998B;
+}
+
+#page-wrapper > hr {
+    margin: 0 2% 2% 2%;
 }
 
 form {
-    text-align: center;
-    margin: 2% 25% auto 25%;
+    width: 50%;
+    margin: auto;
+    padding: 2%;
+    border: solid 2px black;
+    border-radius: 30px;
+    background-color: #e9e9e9;
 }
 
 input, textarea {
+    font-family: Poppins, 'sans-serif';
     width: 100%;
     margin-bottom: 2%;
     padding: 1%;
+}
+
+#submit-button {
+    text-align: center;
+}
+
+#submit-button button {
+    font-weight: bold;
+    margin: auto 2% auto 2%;
+    padding: 2% 4% 2% 4%;
+    border: none;
+    border-radius: 30px;
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    color: white;
+    background-color: #1B998B;
+}
+
+#submit-button button:hover {
+    filter: brightness(110%);
 }
