updated home page

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -417,6 +417,8 @@ transform: translateY(-20%);
   justify-content: center;
   align-items: center;
   text-align: justify;
+  font-family: Poppins, 'sans-serif';
+  font-size: x-large;
 }
 
 .ZONE2-REC5{
@@ -528,6 +530,8 @@ transform: translateY(-20%);
   justify-content: center;
   align-items: center;
   text-align: justify;
+  font-family: Poppins, 'sans-serif';
+  font-size: x-large;
 }
 
 
